--- a/compose.yml
+++ b/compose.yml
@@ -1,27 +1,27 @@
 services:
-  # pressing_api:
-  #   container_name: pressing_api
-  #   build: .
-  #   develop:
-  #     watch: 
-  #     - path: ./src
-  #       action: sync + restart
-  #       target: /app
-  #     - path: Pipfile
-  #       action: rebuild
-  #   environment:
-  #     database_name: pressingdb
-  #   ports:
-  #     - 8000:8000
-  #   depends_on:
-  #     - postgres
+  pressing_api:
+    container_name: pressing_api
+    build: .
+    develop:
+      watch: 
+      - path: .
+        action: sync+restart
+        target: /app
+      - path: Pipfile
+        action: rebuild
+    environment:
+      database_host: postgresdb
+    ports:
+      - 8000:8000
+    depends_on:
+      - postgres
 
     
   postgres:
     image: postgres
     container_name: postgresdb
     environment:
-      POSTGRES_DB: db
+      POSTGRES_DB: pressingdb
       POSTGRES_USER: pressing-api
       POSTGRES_PASSWORD: password
     ports:
