--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ fastapi = {extras = ["all"] }
 sqlalchemy = "*"
 psycopg2-binary = "*"
 passlib = "*"
+python-jose = {extras = ["cryptography"], version = "*"}
 
 [dev-packages]
 
