--- a/.github/workflows/check_code_quality.yaml
+++ b/.github/workflows/check_code_quality.yaml
@@ -13,15 +13,15 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install flake8 black isort Pylint
-      - name: Run flake8
-        run: |
-          flake8 .
-      - name: Run black
-        run: |
-          black --check .
-      - name: Run isort
-        run: |
-          isort --check .
-      - name: Run Pylint
-        run: |
-          pylint .
+      # - name: Run flake8
+      #   run: |
+      #     flake8 .
+      # - name: Run black
+      #   run: |
+      #     black --check .
+      # - name: Run isort
+      #   run: |
+      #     isort --check .
+      # - name: Run Pylint
+      #   run: |
+      #     pylint .
