--- a/.github/workflows/check_code_quality.yaml
+++ b/.github/workflows/check_code_quality.yaml
@@ -1,5 +1,12 @@
 name: check_code_quality
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - develop
+  pull_request:
+    branches:
+      - develop
+
 jobs:
   check_code_quality:
     runs-on: ubuntu-latest
@@ -13,15 +20,20 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install flake8 black isort Pylint
-      # - name: Run flake8
-      #   run: |
-      #     flake8 .
-      # - name: Run black
-      #   run: |
-      #     black --check .
-      # - name: Run isort
-      #   run: |
-      #     isort --check .
+      - name: Run black
+        run: |
+          black --check .
+      - name: Run isort
+        run: |
+          isort --check .
       # - name: Run Pylint
       #   run: |
-      #     pylint .
+      #     pylint . || exit 0
+      #     PYLINT_SCORE=$(pylint --fail-under=7 . | grep -oP "(?<=rated at ).*(?=/10)")
+      #     if [ $(echo "$PYLINT_SCORE > 7" | bc) -eq 1 ]; then
+      #       echo "Pylint score is greater than 7: $PYLINT_SCORE"
+      #       exit 0
+      #     else
+      #       echo "Pylint score is not greater than 7: $PYLINT_SCORE"
+      #       exit 1
+      #     fi
