test quality code

--- a/.github/workflows/check_code_quality.yaml
+++ b/.github/workflows/check_code_quality.yaml
@@ -2,10 +2,10 @@ name: check_code_quality
 on:
   push:
     branches:
-      - develop
+      - dev
   pull_request:
     branches:
-      - develop
+      - dev
 
 jobs:
   check_code_quality:
