--- a/.github/workflows/check_code_quality.yaml
+++ b/.github/workflows/check_code_quality.yaml
@@ -19,13 +19,13 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 black isort Pylint
+          pip install black isort Pylint
       - name: Run isort
         run: |
-          isort --check .
+          isort .
       - name: Run black
         run: |
-          black --check .
+          black .
 
       - name: Run Pylint
         run: |
