--- a/.github/workflows/check_code_quality.yaml
+++ b/.github/workflows/check_code_quality.yaml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Run Pylint
         run: |
-          pylint . || exit 0
+          pylint src || exit 0
           PYLINT_SCORE=$(pylint --fail-under=7 . | grep -oP "(?<=rated at ).*(?=/10)")
           if [ $(echo "$PYLINT_SCORE > 7" | bc) -eq 1 ]; then
             echo "Pylint score is greater than 7: $PYLINT_SCORE"
