--- a/.pylintrc
+++ b/.pylintrc
@@ -1,2 +1,2 @@
 [MESSAGES CONTROL]
-disable=invalid-name,missing-class-docstring,missing-module-docstring
+disable=invalid-name,missing-class-docstring,missing-module-docstring,import-error
