--- a/.pylintrc
+++ b/.pylintrc
@@ -1,2 +1,2 @@
 [MESSAGES CONTROL]
-disable=missing-class-docstring,missing-module-docstring,import-error
+disable=missing-module-docstring,import-error
