--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -13,6 +13,11 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+
+      id-token: write
     steps:
       - name: Checkout to the repo v5
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8
