--- a/compose.override.yml
+++ b/compose.override.yml
@@ -18,6 +18,9 @@ services:
       POSTGRES_HOST_AUTH_METHOD: trust #Uniquement en developpement
 
   pressing_api:
+    build:
+      context: .
+      dockerfile: dev.Dockerfile
     develop:
       watch:
         - path: ./src
@@ -33,3 +36,4 @@ services:
       - ./Pipfile:/app/Pipfile
       - /root/.local/share/virtualenvs/app-4PlAip0Q
       - ./src/invoice:/app/invoices
+
