Fix: deployement need build to be ready first

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -49,6 +49,7 @@ jobs:
           cache-to: type=gha,mode=max
 
   deploy:
+    needs: build
     runs-on: ubuntu-latest
     permissions:
       contents: read
