--- a/compose.override.yml
+++ b/compose.override.yml
@@ -36,6 +36,8 @@ services:
         - path: ./Makefile
           action: sync+restart
           target: /app/Makefile
+    ports:
+      - "127.0.0.1:8000:8000"
     volumes:
       - ./Pipfile:/app/Pipfile
       - /root/.local/share/virtualenvs/app-4PlAip0Q
