fix: update dockerfile reference in compose.override.yml and clean up formatting in docker-compose.yml

--- a/compose.override.yml
+++ b/compose.override.yml
@@ -24,7 +24,7 @@ services:
   pressing_api:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: dev.Dockerfile
     develop:
       watch:
         - path: ./src
