fix: update deployment branch to 'dev' in deploy.yaml and change image tag to 'dev' in docker-compose.yml

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -2,10 +2,10 @@ name: Deploy on VPS
 on:
   push:
     branches:
-      - main
+      - dev
   pull_request:
     branches:
-      - main
+      - dev
   
 env:
   REGISTRY: ghcr.io
