--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-fastapi = {extras = ["all"] }
+fastapi = "*"
+starlette = "*"
+uvicorn = "*"
+python-multipart = "*"
 sqlalchemy = "*"
 psycopg2-binary = "*"
 passlib = "*"
@@ -17,6 +20,8 @@ pytest = "*"
 pydantic-extra-types = "*"
 faker = "*"
 weasyprint = "*"
+pydantic-settings = "*"
+email-validator = "*"
 
 [dev-packages]
 faker = "*"
