Fix: Remove existing .env directory before creating a new one during deployment

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -91,6 +91,10 @@ jobs:
             mkdir -p "$DIR"
             chmod 700 "$DIR"
 
+             if [ -d "$DIR/.env" ]; then
+              rm -rf "$DIR/.env"
+            fi
+
             umask 177
             cat > "$DIR/.env" << 'EOF'
             APP_NAME=${{ vars.APP_NAME }}
