Fix: Update Docker deployment script to stop and remove existing container before launching a new one; adjust ngrok command port to 8000 and add 'traefik_net' to ngrok service networks

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -162,6 +162,9 @@ jobs:
           password: ${{ secrets.SERVER_PASSWORD }}
           script: |
             cd /root/${{vars.APP_NAME}}
+            docker stop pressing_api || true
+            docker rm pressing_api || true
+
             docker system prune -af
             docker compose up -d
             cd ..
