--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,9 +45,10 @@ services:
     environment:
       - NGROK_PORT=8000
       - NGROK_AUTHTOKEN= ${NGROK_AUTHTOKEN} 
-    command:  http pressing_api:80
+    command:  http pressing_api:8000
     networks:
       - pressing
+      - traefik_net
 
 volumes:
   db:
