Fix: Add ngrok service to docker-compose and update get_api_url function for environment handling; improve order creation error handling in order_service.py; remove unused PDF and add favicon.ico

--- a/compose.override.yml
+++ b/compose.override.yml
@@ -44,3 +44,16 @@ services:
       - ./src/invoice:/app/invoices
       - ./scripts/init_test_databases.sh:/docker-entrypoint-initdb.d/init_test_databases.sh
 
+
+  ngrok:
+    image: ngrok/ngrok:latest
+    container_name: ngrok
+    ports:
+      - "4040:4040"
+    environment:
+      - NGROK_PORT=8000
+      - NGROK_AUTHTOKEN= ${NGROK_AUTHTOKEN} 
+    command:  http pressing_api:8000
+    networks:
+      - pressing
+      - traefik_net
