Fix: Update GitHub Actions workflow to remove pull request trigger; adjust Docker Compose files for pgAdmin and Postgres service configurations

--- a/compose.override.yml
+++ b/compose.override.yml
@@ -11,6 +11,7 @@ services:
       - postgres
     volumes:
       - pgadmin-data:/var/lib/pgadmin
+      
 
 
   postgres:
@@ -57,3 +58,7 @@ services:
     networks:
       - pressing
       - traefik_net
+
+volumes:
+  pgadmin-data:
+    name: pgadmin-data
