--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       POSTGRES_DB:  ${DATABASE_NAME}
       POSTGRES_USER: ${DATABASE_USER}
       POSTGRES_PASSWORD_FILE: /run/secrets/postgres_password
+      PGDATA: /var/lib/postgresql/data/pgdata   # <— important
     volumes:
       - db:/var/lib/postgresql/data
       - ./postgres_password.txt:/run/secrets/postgres_password:ro
@@ -41,8 +42,7 @@ services:
 volumes:
   db:
     name: pressingdb
-  pgadmin-data:
-    name: pgadmin-data
+
 
 networks:
   pressing:
