Fix: Remove postgres_password.txt if it exists before writing new secrets

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -149,6 +149,11 @@ jobs:
             printf "%s" "${{ secrets.DATABASE_PASSWORD }}" > "$DIR/postgres_password.txt"
             chmod 600 "$DIR/postgres_password.txt"
 
+
+                  if [ -d "$DIR/postgres_password.txt" ]; then
+                    rm -rf "$DIR/postgres_password.txt"
+                  fi
+
             echo "Secrets written to: $DIR"
 
 
